# PyGMA

./: LICENSE  README.md  pyproject.toml
examples/: main.py
src/java/PyGMA/: PyAppOpenAd.java  PyBannerAd.java  PyGMAListener.java  PyGMAManager.java  PyInterstitialAd.java  PyRewardedAd.java  PyRewardedInterstitialAd.java
src/pygma/: __init__.py  app_open.py  banner.py  interstitial.py  manager.py  platform_detection.py  rewarded.py  rewarded_interstitial.py
src/pygma/android/: __init__.py  app_open.py  banner.py  bridge.py  interstitial.py  listener.py  manager.py  rewarded.py  rewarded_interstitial.py
